<resources>
    <string name="app_name">ProjectTesting</string>
    <string name="hello_espresso">Hello Espresso!</string>
    <string name="type_something">type something…</string>
    <string name="change_text">Change text</string>
    <string name="open_activity_and_change_text">Open activity and change text</string>
</resources>